# asthralios

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  RESEARCH.md  pyproject.toml  requirements.txt  setup.py  system-prompt.md
doc/: chat-interface.dia
lib/asthralios/: __init__.py  __main__.py  config.py  gpt.py  logger.py
lib/asthralios/adapters/: atwiki.py  hatchet.py
lib/asthralios/asr/: whisper_asr.py
lib/asthralios/brain/: __init__.py  classifier.py  db.py  digest.py  prompts.py  rbac.py  schema.py  vault.py  writer.py
lib/asthralios/chat/: README.md  __init__.py  adapter.py  agentic.py  manager.py  my_discord.py  my_msteams.py  my_slack.py
lib/asthralios/chiquito/: README.md
lib/asthralios/cli/: __init__.py  __main__.py
lib/asthralios/senses/: __init__.py  ears.py  hands.py
lib/asthralios/sentinel/: __init__.py  cqc.py  prompts.py  types.py
lib/asthralios/vad/: pyannote_vad.py
lib/asthralios/voice/: __init__.py  modern_trainer.py  trainer.py
tests/: asthralios-voice-server.py  runtests.py  speech-using-xtts.py  voice.py
tests/asthraliosunit/: __init__.py
tests/asthraliosunit/adapters/: __init__.py  test_atwiki.py  test_hatchet.py
tests/asthraliosunit/brain/: test_classifier.py  test_db.py  test_rbac.py  test_vault.py  test_writer.py
