[build-system]
requires = ["setuptools>=80", "wheel", "setuptools-scm>=9"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
asthralios = "lib/asthralios"

[tool.setuptools.packages.find]
where = ["lib"]

[project]
name = "asthralios"
dynamic = ["version"]
description = "Markizano's Assistant"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [
    { name = "Markizano Draconus", email = "python@markizano.net" },
]
maintainers = [
    { name = "Markizano Draconus", email = "python@markizano.net" },
]
dependencies = [
    "atlassian-python-api==4.0.4",
    "discord-py==2.6.4",
    "easydict>=1.13",
    "faster-whisper>=1.2.1",
    "kizano==1.0.6",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.13",
    "langchain-ollama>=1.0.1",
    "langchain-postgres>=0.0.16",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.8",
    "openai>=2.21.0",
    "openwebui-client==0.3.2",
    "pasimple==0.0.3",
    "pygithub==2.7.0",
    "python-dotenv==1.1.1",
    "pyyaml>=6.0.1",
    "requests>=2.32.5",
    "slack-bolt==1.27.0",
    "slack-sdk==3.40.0",
    "tts>=0.22.0",
]
keywords = [ "ai", "artificial intelligence", "agentic", "langchain" ]

[project.urls]
homepage = "https://markizano.net/"
repository = "https://github.com/markizano/asthralios"

[project.scripts]
asthralios = "asthralios:main"
